force-app/main/default/objects/Ag_District__c/Ag_District__c.object-meta.xml
<CustomObject>
    <description>Ag District is comprised of counties. Ag district is confined by state lines as it consists of counties which are also confined by state lines. 

Ag District is defined by the USDA

One Ag District can contain many counties.
One State can contain many Ag Districts
One Macro Region can contain many Ag Districts</description>
    <label>Ag District</label>
    <nameField>
        <label>Ag District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ag Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>