force-app/main/default/objects/Ag_District__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Ag District&apos;s Code</description>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>