force-app/main/default/objects/Ag_District__c/fields/Concatenate_Name__c.field-meta.xml
<CustomField>
    <fullName>Concatenate_Name__c</fullName>
    <description>Unique name for each Ag District within each State</description>
    <formula>State__r.Name +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenate Name</label>
    <type>Text</type>
</CustomField>