force-app/main/default/objects/Ag_District__c/fields/Macroregion__c.field-meta.xml
<CustomField>
    <fullName>Macroregion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Macroregion</label>
    <referenceTo>Macroregion__c</referenceTo>
    <relationshipLabel>Ag Districts</relationshipLabel>
    <relationshipName>Ag_Districts</relationshipName>
    <type>Lookup</type>
</CustomField>