force-app/main/default/objects/Ag_District__c/fields/Product_Placement_Macroregion__c.field-meta.xml
<CustomField>
    <fullName>Product_Placement_Macroregion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Placement Macroregion</label>
    <referenceTo>Macroregion__c</referenceTo>
    <relationshipLabel>Ag Districts (Product Placement Macroregion)</relationshipLabel>
    <relationshipName>Ag_Districts1</relationshipName>
    <type>Lookup</type>
</CustomField>