force-app/main/default/objects/Ag_District__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>State</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Ag Districts</relationshipLabel>
    <relationshipName>Ag_Districts</relationshipName>
    <type>Lookup</type>
</CustomField>