force-app/main/default/objects/Ag_District__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Concatenate_Name__c</columns>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Macroregion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>